Fix index.html x-overflow

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 #title {
     font-family: 'EB Garamond', serif;
